--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <p class="lead">We welcome you to the Github World. Here are some videos that will help you to guide How to use Github and perform various commands. </p>
       <br><br>
       <video class="center" controls="controls" autoplay align="center" height="300">
-        <source src="task-3-awt_hgysu6HR.mov" vieo="web/mov">
+        <source src="awt_commands.mp4" vieo="web/mov">
       </video>
       <br><br>
       <h2><mark>GITHUB </mark></h2>
@@ -117,23 +117,23 @@
           <div class="row">
               <div class="ph1 col-md-4">
                   <div class="thumbnail">
-                    <img src="img4.jpg" height="270" width="240">
+                    <img src="titleimage.jpg" height="270" width="240">
                   </div> 
               </div> 
               <div class="ph2 col-md-4">
                   <div class="thumbnail">
-                  <img src="img5.jpg" height="270" width="240" >
+                  <img src="titleimage.jpg" height="270" width="240" >
                   </div>
               </div>
               <div class="ph3 col-md-4">
                   <div class="thumbnail">
-                  <img src="img4.jpg" height="270" width="240" >
+                  <img src="titleimage.jpg" height="270" width="240" >
                   </div>
               </div>
           </div>
       </div>
       <br>
-      <pre>   Do share your reviews with us by tagging us on Instagram-@arshmatharoo733.github.io</pre>
+      <pre>   Do share your reviews with us by tagging us on Instagram-@amisha.github.io</pre>
     </div>
   </div>
 </div>
