--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
   .bgimg {
-    background-image: url('titleimage.jpg');
-   background-size: 100% 100;
+    background-image: url('titleimage1.jpg');
+   background-size: 100% 100%;
   
    width: 100%;
    height: 400px;
