--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
 
 <div class="jumbotron text-center bgimg" style="margin-bottom:0">
-  <h1  class="text-white"><strong><br><br>GITHUB WEBSITE VIDEOS</strong></h1>
-  <h2 class="text-white"><strong>TASK 3!!!!</strong></h2> 
+  <h1  class="text-warning"><strong><br><br>GITHUB WEBSITE VIDEOS</strong></h1>
+  <h2 class="text-warning"><strong>TASK 3!!!!</strong></h2> 
   
 </div>
 
@@ -73,7 +73,7 @@
     <div class="col-sm-3">
       <h2><mark>ABOUT US </mark></h2>
       
-      <div class="fakeimg lead"><img src="img7.png" alt="img" height="200" width="170"></div>
+      <div class="fakeimg lead"><img src="img7.png" alt="img" height="200" width="190"></div>
       <br>
       <p>This site is the task 3 of advanced web techology and has a video of various commands of github.</p>
       <br>
